# tgoskits

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  TEST_RESTRUCTURE_COMPLETE.md  optimization_summary.md  test_la64.sh
.cargo/: config.toml
apps/helloworld/: qemu-aarch64.toml
apps/helloworld/src/: main.rs
build-config/: aarch64.toml  loongarch64.toml
components/rsext4/src/: lib.rs  loopfile.rs  tool.rs
components/rsext4/tests/: api_functional.rs  crc_integrity.rs  directory_operations.rs  error_handling.rs  file_operations.rs  integration_test.rs  metadata_lifecycle.rs
crates/dma-api/: Cargo.toml
crates/dma-api/src/: array.rs  common.rs  dbox.rs
crates/page-table-generic/examples/: usage_example.rs
crates/page-table-generic/src/: def.rs  frame.rs  lib.rs  map.rs  table.rs  walk.rs
crates/someboot/: Cargo.toml  build.rs
crates/somehal/: Cargo.toml  build.rs
crates/somehal-macros/: CLAUDE.md  Cargo.toml
crates/somehal/src/: consts.rs  fdt.rs  irq.rs  lib.rs
crates/somehal/src/acpi/: mod.rs
crates/somehal/src/arch/aarch64/: _macros.rs  entry.rs  head.rs  link.ld  mod.rs  paging.rs
crates/somehal/src/arch/aarch64/el1/: mod.rs
crates/somehal/src/arch/aarch64/paging/: pte.rs
crates/somehal/src/arch/loongarch64/: _macros.rs  entry.rs  mod.rs  paging.rs  pte.rs  registers.rs  relocate.rs  trap.rs
crates/somehal/src/arch/loongarch64/register/: mod.rs
crates/somehal/src/efi_stub/: mod.rs
crates/somehal/src/efi_stub/system/: mod.rs
crates/somehal/src/efi_stub/table/: mod.rs
crates/somehal/src/efi_stub/table/protocol/: console.rs
crates/somehal/src/fdt/: mod.rs
crates/somehal/src/mem/: mod.rs  ram.rs  tmp_alloc.rs
crates/sparreal-kernel/: Cargo.toml
crates/sparreal-kernel/src/hal/: al.rs  mod.rs  setup.rs  timer.rs
crates/sparreal-kernel/src/hal/irq/: mod.rs
crates/sparreal-kernel/src/os/mem/: address.rs  allocator.rs  mod.rs  paging.rs
crates/sparreal-kernel/src/os/sync/: spinlock.rs
platform/somehal/: Cargo.toml  README.md
platform/someplat/: Cargo.toml
platform/someplat/src/: lib.rs
platform/sparreal-rt/: CLAUDE.md  Cargo.toml  link.ld
test-suit/timer/: loongarch64.toml
(+103 files in other folders)
