[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Sparreal OS kernel"
edition.workspace = true
keywords = ["os"]
license = "MPL-2.0"
name = "sparreal-kernel"
repository = "https://github.com/ZR233/sparreal-os"
version = "0.13.0"

[dependencies]
sparreal-macros = {workspace = true}

buddy_system_allocator = "0.11"
log = {workspace = true}
trait-ffi = "0.2"
spin = "0.10"
os-helper = {workspace = true}